--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "NODE_ENV=production webpack --mode production"
   },
   "keywords": [],
   "author": "",
